# Cortex

./: .gitattributes  .gitignore  AGENTS.md  README.md  config.yaml  install.py  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  typecheck.yml
benchmark/: README.md  build_wheel.sh  cortex_agent.py
cortex/: __init__.py  __main__.py  config.py  conversation_manager.py  gpu_validator.py  inference_engine.py  logging_config.py  lumen_runtime.py  model_downloader.py  model_manager.py  runtime_io.py  update_check.py
cortex/app/: __init__.py  command_output.py  command_service.py  headless.py  lazy_inference_engine.py  model_service.py  permission_service.py  session_service.py  update_service.py  worker_runtime.py
cortex/cloud/: __init__.py  catalog.py  credentials.py  router.py  types.py
cortex/cloud/clients/: __init__.py  anthropic_client.py  lumen_client.py  openai_client.py  scripted_client.py
cortex/fine_tuning/: __init__.py  dataset.py  mlx_lora_trainer.py  trainer.py  wizard.py
cortex/metal/: README.md  __init__.py  gpu_validator.py  memory_pool.py  mlx_accelerator.py  mlx_compat.py  mlx_converter.py  mps_optimizer.py  optimizer.py  performance_profiler.py
cortex/protocol/: __init__.py  events.py  rpc_server.py  schema.py  types.py
cortex/quantization/: __init__.py  dynamic_quantizer.py
cortex/template_registry/: __init__.py  auto_detector.py  config_manager.py  interactive.py  registry.py
cortex/template_registry/template_profiles/: __init__.py  base.py
cortex/template_registry/template_profiles/complex/: __init__.py  reasoning.py
cortex/template_registry/template_profiles/standard/: __init__.py  alpaca.py  chatml.py  gemma.py  llama.py  simple.py
cortex/tooling/: __init__.py  agent_prompt.py  base.py  local_protocol.py  orchestrator.py  permissions.py  provenance.py  registry.py  stream_normalizer.py  types.py
cortex/tooling/builtin/: __init__.py  apply_patch.py  bash.py  common.py  diff_util.py  edit_file.py  list_dir.py  read_file.py  search.py  write_file.py
cortex/tools/: __init__.py  errors.py  fs_ops.py  protocol.py  search.py  tool_runner.py
cortex/ui/: __init__.py  box_rendering.py  cli.py  cli_commands.py  cli_prompt.py  finetune.py  generation.py  help_ui.py  input_box.py  markdown_render.py  model_download_ui.py  model_login_ui.py  model_manage_ui.py  startup.py  status_ui.py  template.py  terminal_app.py  tool_activity.py  tools.py  version_check.py
cortex/ui_runtime/: __init__.py  launcher.py
cortex/utils/: param_utils.py
docs/: architecture-runtime.md  cli.md  configuration.md  conversation-management.md  development.md  dynamic-quantization.md  fine-tuning.md  gpu-validation.md  inference-engine.md  installation.md  mlx-acceleration.md  model-management.md  protocol-debugging.md  template-registry.md  troubleshooting.md
frontend/cortex-tui/: package-lock.json  package.json  tsconfig.json
frontend/cortex-tui/scripts/: build.ts
frontend/cortex-tui/src/: app.tsx  commands.ts  index.tsx  protocol.ts
frontend/cortex-tui/src/components/: command_palette.tsx  diff_view.tsx  markdown.tsx  prompt_panel.tsx  selection_list.tsx  syntax_highlight.ts  tool_block.tsx  tool_inline.tsx  ui_palette.ts
frontend/cortex-tui/src/components/messages/: assistant_message.tsx  system_message.tsx  user_message.tsx
frontend/cortex-tui/src/context/: rpc.tsx  session_store.ts  store.tsx
frontend/cortex-tui/src/lib/: animation.ts  exit.ts  git_branch.ts  notices.ts  paths.ts  progress_lines.ts  spinner.ts  terminal_size.ts
frontend/cortex-tui/src/routes/: session.tsx
frontend/cortex-tui/tests/: notices.test.ts  paths.test.ts  progress_lines.test.ts  store_notices.test.ts
scripts/: typecheck.sh
tests/: conftest.py  lumen_fakes.py  test_agent_runtime_e2e.py  test_anthropic_client_tools_streaming.py  test_apple_silicon.py  test_cli_commands_cloud.py  test_cli_prompt_context.py  test_cloud_catalog.py  test_cloud_credentials.py  test_cloud_only_fallback.py  test_cloud_router.py  test_command_service_worker.py  test_config_cloud.py  test_config_env_overrides.py  test_diff_util.py  test_frontend_unit.py  test_generation_cloud_context.py  test_generation_output_prefix.py  test_generation_stream_delta.py  test_lumen_client.py  test_lumen_runtime.py  test_main_entrypoint.py  test_metal_optimization.py  test_model_downloader.py  test_model_service.py  test_openai_client_tools_streaming.py  test_openai_client_utils.py  test_packaging.py  test_protocol_events.py  test_protocol_rpc_server.py  test_provenance.py  test_session_service_events.py  test_stream_normalizer.py  test_tooling_edit_write.py  test_tooling_orchestrator.py  test_tooling_paths.py  test_tooling_permissions.py  test_tools.py  test_tui_e2e.py  test_tui_layout_invariants.py  (+8 more)
tools/: README.md  optimize_apple_silicon.sh
