[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-llm"
version = "1.0.18"
description = "Terminal AI coding agent for Apple Silicon — local MLX/GGUF models and cloud APIs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Cortex Development Team"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Environment :: GPU",
]
keywords = ["llm", "coding-agent", "gpu", "metal", "apple-silicon", "ai", "terminal", "mlx", "gguf"]

# Cloud-only core: runs anywhere (Linux containers included).
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "openai>=1.54.0",
    "anthropic>=0.42.0",
    "keyring>=24.3.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-psutil>=7.0.0.20251001",
]

[project.scripts]
cortex = "cortex.__main__:main"

[project.urls]
Homepage = "https://github.com/faisalmumtaz89/Cortex"
"Bug Tracker" = "https://github.com/faisalmumtaz89/Cortex/issues"
Documentation = "https://github.com/faisalmumtaz89/Cortex/wiki"

[tool.setuptools]
packages = ["cortex", "cortex.app", "cortex.protocol", "cortex.cloud", "cortex.cloud.clients", "cortex.ui_runtime", "cortex.tooling", "cortex.tooling.builtin"]
include-package-data = true

[tool.setuptools.package-data]
cortex = ["config.yaml", "ui_runtime/bin/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N805"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["keyring", "keyring.errors"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that require GPU/Metal and may be slow",
]
